# iris-exporter-legacy

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  README.md  export.py  ftp-sync.sh  index.py  iris-cron.sh  iris_exporter.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docker.yml
exports/: README.md
scripts/: export.py  index.py
