[tool.poetry]
name = "iris-exporter"
version = "0.1.0"
description = ""
authors = ["Maxime Mouchet <max@maxmouchet.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
diamond-miner = { path = 'diamond-miner', develop = true }
httpx = "^0.18.2"
tqdm = "^4.60.0"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
iris-exporter = 'iris_exporter:app'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
