[tool.poetry]
name = "iris-exporter"
version = "0.1.0"
description = ""
authors = ["Maxime Mouchet <max@maxmouchet.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
diamond-miner = "^0.3.4"
httpx = "^0.20.0"
tqdm = "^4.62.3"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
iris-exporter = 'iris_exporter:app'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
