[tool.poetry]
name = "iris-exporter"
version = "0.1.0"
description = ""
authors = ["Maxime Mouchet <max@maxmouchet.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
diamond-miner = "^1.1.2"
dioptra-iris-client = "^0.5.4"
tqdm = "^4.64.0"
typer = "^0.16.1"

[tool.poetry.group.dev.dependencies]

[tool.poetry.scripts]
iris-exporter = 'iris_exporter:app'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
